Adding in feature2 branch

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores ipsam obcaecati voluptas consectetur id mollitia sapiente minus debitis fuga eveniet!</p>
+<p>This is a new feature</p>
